Arreglo de Detalles

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <a href="#" class="nav__links">Inicio</a>
                 </li>
                 <li class="nav__items">
-                    <a href="#" class="nav__links">Acerca de</a>
+                    <a href="#acercade" class="nav__links">Acerca de</a>
                 </li>
                 <li class="nav__items">
                     <a href="#" class="nav__links">Contacto</a>
@@ -69,6 +69,7 @@
 
     </header>
     <main>
+        <div id="acercade"></div>
         <section class="container about">
             <h2 class="subtitle">
                 ¿Qué aprenderas en este curso?
